Viewport compositing error without NPOT support #46105

Closed
opened 2015-09-14 06:55:55 +02:00 by Joseph Eagar · 9 comments
Member

Screenspace AO doesn't work correctly on cards blacklisted for non-power-of-2 textures.

screenao_npot.png

Screenspace AO doesn't work correctly on cards blacklisted for non-power-of-2 textures. ![screenao_npot.png](https://archive.blender.org/developer/F233183/screenao_npot.png)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Confirmed. I was looking into this while checking on NPOT off-screen rendering.

Note that this isn't a regression, though it would be good to fix of course.

However being so close to release, larger changes here should go via patch review first.

Confirmed. I was looking into this while checking on NPOT off-screen rendering. Note that this isn't a regression, though it would be good to fix of course. However being so close to release, larger changes here should go via patch review first.
Campbell Barton changed title from Screenspace AO Bug With Disabled NPOT to Viewport compositing error without NPOT support 2015-09-14 11:09:05 +02:00
Antonis Ryakiotakis was assigned by Campbell Barton 2015-09-14 11:09:33 +02:00

@JosephEagar, are you using hardware which can do GPU compositing but has no NPOT support? Or is this just an error when testing with it forcefully disabled?

@JosephEagar, are you using hardware which can do GPU compositing but has no NPOT support? Or is this just an error when testing with it forcefully disabled?
Author
Member

Hardware has NPOT support, but is being blacklisted (there's a comment in gpu_extensions.c that certain API chipsets have issues, or something like that).

Hardware has NPOT support, but is being blacklisted (there's a comment in gpu_extensions.c that certain API chipsets have issues, or something like that).

It would help to have your system specs (OS, GPU model) and the system_info.txt generated from blender.

Can you try forcibly enabling npo2 support in blender and check if compositing works properly and fast?

That said, I'm quite sceptical about supporting those GPUs. While they can support compositing, since all that is needed is shader support + framebuffer object support, accounting for npo2 support can be annoying while writing more shaders and those GPUs are quite old indeed. Remember, we don't have fast way to debug code on GPU, it has to be done visually and through trial and error. Having an extra reason why code breaks due to po2 factors going wild makes things more hectic to develop for 95% of GPUs out there which do have npo2 support.

So I'm more inclined to unblacklist your GPU and disable compositing for po2 only GPUs rather than adding scaling factors to all shaders to properly account for such systems.

It would help to have your system specs (OS, GPU model) and the system_info.txt generated from blender. Can you try forcibly enabling npo2 support in blender and check if compositing works properly and fast? That said, I'm quite sceptical about supporting those GPUs. While they can support compositing, since all that is needed is shader support + framebuffer object support, accounting for npo2 support can be annoying while writing more shaders and those GPUs are quite old indeed. Remember, we don't have fast way to debug code on GPU, it has to be done visually and through trial and error. Having an extra reason why code breaks due to po2 factors going wild makes things more hectic to develop for 95% of GPUs out there which do have npo2 support. So I'm more inclined to unblacklist your GPU and disable compositing for po2 only GPUs rather than adding scaling factors to all shaders to properly account for such systems.

This issue was referenced by 2d16622068

This issue was referenced by 2d16622068d4662a24ab58a08f899b5228d5a81a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46105
No description provided.